[package]
name = "polify"
version = "0.1.0"
authors = ["ClementTsang <clementjhtsang@gmail.com>"]
edition = "2018"

[dependencies]
image = { version = "0.23.12", default-features = false, features = [ "gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld" ] } 
thiserror = "1.0"
imageproc = "0.22.0"
rand = "0.8"
delaunator = "0.2.0"

futures = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.3"
js-sys = "0.3"
web-sys = { version = "0.3", features = [ "Headers", "WorkerGlobalScope", "Response", "ResponseInit" ] }

# For normal usage
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.5.0"

# [target.'cfg(target_arch = "wasm32")'.dependencies]

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
    "examples/simple_test",
]

[profile.release]
# debug = true
lto = true
opt-level = "s"
