[package]
name = "polify"
version = "0.1.0"
authors = ["ClementTsang <clementjhtsang@gmail.com>"]
edition = "2018"
description = "A WebAssembly-compatible crate to create polygon art from images based on Delaunay triangulation."
license = "MIT"
repository = "https://github.com/ClementTsang/polify"

[dependencies]
image = { version = "0.23.12", default-features = false, features = [ "gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld" ] } 
thiserror = "1.0"
delaunator = "0.2.0"
rand = "0.8"

futures = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.3"
js-sys = "0.3"
web-sys = { version = "0.3", features = [ "Headers", "WorkerGlobalScope", "Response", "ResponseInit", "console" ] }

# For normal usage
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.5.0"
imageproc = "0.22.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
imageproc = { version = "0.22.0", default-features = false }
getrandom = { version = "0.2.1", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
    "examples/simple_test",
]

[profile.release]
# debug = true
lto = true
opt-level = "s"
