[package]
name = "polify"
version = "0.1.0"
authors = ["ClementTsang <clementjhtsang@gmail.com>"]
edition = "2018"
description = "A WebAssembly-compatible crate to create polygon art from images based on Delaunay triangulation."
license = "MIT"
repository = "https://github.com/ClementTsang/polify"

[dependencies]
thiserror = "1.0.58"
delaunator = "1.0.2"
rand = "0.8.5"
image = { version = "0.23.14", default-features = false, features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dxt",
    "dds",
    "farbfeld",
] } # 0.24+ seems to have issues?
futures = "0.3.30"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["Headers", "WorkerGlobalScope", "Response", "ResponseInit", "console"] }

# For normal usage
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10.0"
imageproc = "0.22.0" # 0.23+ seems to have issues?

[target.'cfg(target_arch = "wasm32")'.dependencies]
imageproc = { version = "0.22.0", default-features = false }
getrandom = { version = "0.2.12", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["examples/simple_test"]

[profile.release]
strip = "symbols"
debug = false
lto = true
opt-level = "s"
